fixed tag chip size on mobile

--- a/themes/texify/assets/sass/layouts/list.scss
+++ b/themes/texify/assets/sass/layouts/list.scss
@@ -166,7 +166,7 @@
 
 @media screen and (max-width: $mobile-breakpoint) {
   .post-taxonomy-overview .taxonomy-toggle {
-    padding-bottom: 0.2em;
+    padding-bottom: 0.21em;
   }
 }
 
